@@ -3,6 +3,8 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 ==06/09/2009==
 Trevius: Added rule Combat:ArcheryStationaryPenalty to allow adjustment of the Archery damage penalty for moving or rooted targets.
 KLS: Backstab tweak again.
+KLS: Added Perl commands: GetItemAt(slot), GetAugmentAt(slot, aug_slot) both returning type ItemInst usable from the Client object.
+KLS: Added Perl command: IsType() for use on the ItemInst object.
 
 Optional SQL: \utils\sql\svn\646_archery_penalty_rule.sql
 
